# rust-rat

./: .gitignore  Cargo.toml  IMAGES.md  LICENSE  README.md  USERMANUAL.md
client/: Cargo.toml
client/src/: handler.rs  main.rs  settings.rs
client/src/features/: encryption.rs  file_manager.rs  mod.rs  other.rs  process.rs  reverse_shell.rs  system_commands.rs  tray_icon.rs
client/src/service/: config.rs  install.rs  mod.rs  mutex.rs
common/: Cargo.toml
common/src/: buffers.rs  commands.rs  lib.rs
server/: index.html  package-lock.json  package.json  types.d.ts
server/src/: App.jsx  App.tsx  Layout.jsx  Layout.tsx  Server.jsx  Server.tsx  main.jsx  main.tsx  styles.css
server/src-tauri/: Cargo.toml  tauri.conf.json
server/src-tauri/src/: client.rs  main.rs  server.rs
server/src-tauri/src/handlers/: mod.rs  tauri.rs
server/src/components/: ContextMenu.jsx  ContextMenu.tsx  Header.jsx  Header.tsx  Navigation.jsx  Navigation.tsx  Shell.jsx  Shell.tsx
server/src/pages/: ClientList.jsx  ClientList.tsx  ClientView.jsx  ClientView.tsx  FileManager.jsx  FileManager.tsx  Home.jsx  Home.tsx  ProcessList.jsx  ProcessList.tsx  RemoteShell.jsx  RemoteShell.tsx  Settings.jsx  Settings.tsx
server/src/rat/: RATCommands.tsx  RATContext.jsx  RATContext.tsx  RATProvider.jsx  RATProvider.tsx
server/src/utils/: commands.jsx  commands.tsx  keybindings.jsx  keybindings.tsx
