[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
winapi = { version = "0.3.9", features = ["synchapi", "errhandlingapi", "dxgi1_2", "winerror", "wingdi", "winuser", "securitybaseapi"] }
screenshots = "0.8.10"
base64 = "0.22.0"
sysinfo = "0.30.10"

[profile.release]
lto = true
opt-level = 'z'
strip = true
codegen-units = 1
panic = "abort"
