[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1.2.0"
chacha20poly1305 = "0.9.0"
rand_chacha = "0.3.1"
winapi = { version = "0.3.9", features = ["winuser"] }
