[package]
name = "server"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.20.1", features = ["rt", "full"] }
lazy_static = "1.4.0"
base64 = "0.22.0"


[features]
custom-protocol = ["tauri/custom-protocol"]
